@@ -13,6 +13,7 @@ o Extract font files from a document
 o List images on a page with -list-images[-json]
 o Chop pages up into sections with -chop
 o Build PDF files from JBIG2 streams, including globals
+o Reprocess images within PDFs to further compress them
 
 Extended features:
 
